# demo_engine

./: CLAUDE.md  Cargo.toml  README.md  config.toml
assets/shaders/basic/: triangle.wgsl
docs/claude/: README.md
docs/claude/architecture/: analysis.md  diagrams.md
docs/claude/evaluation/: current_state.md
docs/claude/features/: editor_ui_system_design.md  ui_system_design.md
docs/claude/refactoring/: phase_1_immediate.md  phase_2_short_term.md  phase_3_long_term.md  roadmap.md
src/: main.rs
src/app/: app.rs  mod.rs
src/core/: config.rs  error.rs  logging.rs  metrics.rs  mod.rs
src/graphics/: engine.rs  mod.rs  renderer.rs  surface_manager.rs
src/graphics/renderer/: mod.rs  renderer.rs
src/graphics/renderer/pipelines/: triangle_pipeline.rs
src/input/: mod.rs
src/resources/: manager.rs  mesh.rs  mod.rs  vertex.rs
src/resources/buffers/: triangle.rs
src/resources/primitives/: cube.rs  mod.rs  quad.rs  sphere.rs  triangle.rs
src/resources/uniforms/: mod.rs
src/scene/: camera.rs  demo_scene.rs  manager.rs  mod.rs  render_object.rs  transform.rs
src/secen/: mod.rs
src/window/: mod.rs
