[package]
name = "demo_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
wgpu = "26.0.1"

crevice = { version = "0.18.0", features = ["glam"], default-features = false }
glam = "0.30.5"

bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = "0.4.0"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0"
tempfile = "3.0"

log = "0.4.27"
env_logger = "0.11.8"
